# zero2prod

./: .env  Cargo.toml  Dockerfile  Taskfile.yml  configuration.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-82506615920f45ec48d8dd07c7fa6b27773f40d95208dfbc20d30f14818d2743.json
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
