[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Wesley Cheek <wesleycheek@protonmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2.10.0"
reqwest = "0.12.12"
tokio = "1.43.0"
