[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Wesley Cheek <wesleycheek@protonmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.40"
config = "0.15.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", default-features = false, features = [
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "runtime-tokio",
] }
uuid = { version = "1.15.1", features = ["v4"] }


[dev-dependencies]
actix-rt = "2.10.0"
reqwest = "0.12.12"
tokio = "1.43.0"
